--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         </div>
                         <div class="protocol-price">
                             <span>$35.00</span>
-                            <button class="text-xs font-bold uppercase tracking-widest hover:text-blue-600 transition-colors">Acquire</button>
+                            <a href="https://base-matter-2.myshopify.com/products/micronized-creatine?variant=43963412119594:1" class="text-xs font-bold uppercase tracking-widest hover:text-blue-600 transition-colors btn">Acquire</a>
                         </div>
                     </div>
 
@@ -506,4 +506,5 @@
     </script>
 
 </body>
+
 </html>
